--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "amp-map": "^1.0.1",
     "amp-values": "^1.0.1",
     "bluebird": "^2.8.0",
+    "debug": "^2.1.3",
     "promise-parallel": "^1.0.0"
   },
   "devDependencies": {
